Assignment-5/parser.output
Terminals unused in grammar

   PRINT
   MOD


State 67 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: stmt_list

    2 stmt_list: stmt_list stmt
    3          | %empty

    4 stmt: RETURN SEMI
    5     | RETURN bool_conditions SEMI
    6     | BREAK SEMI
    7     | CONTINUE SEMI
    8     | var_dec SEMI
    9     | func_dec
   10     | if_block
   11     | loop_block
   12     | stmt_block
   13     | switch_case_statement
   14     | assignment SEMI
   15     | SEMI

   16 var_dec: type var_list

   17 var_list: var_list COMMA id_array
   18         | id_array

   19 func_dec: func_header left_curly stmt_list right_curly

   20 func_header: type ID LB func_params RB

   21 func_params: param_decl
   22            | %empty

   23 param_decl: param_decl COMMA decl
   24           | decl

   25 decl: type ID
   26     | type ID LSQ RSQ

   27 type: INT
   28     | FLOAT
   29     | VOID

   30 if_block: if_condition stmt ELSE stmt
   31         | if_condition stmt

   32 if_condition: IF LB assignment RB

   33 loop_block: while_condition stmt
   34           | for_condition stmt

   35 while_condition: WHILE LB assignment RB

   36 for_condition: FOR LB assignment SEMI assignment SEMI assignment RB

   37 stmt_block: left_curly stmt_list right_curly

   38 switch_case_statement: SWITCH LB operation RB left_curly case_statement_block right_curly

   39 case_statement_block: case_list default_statemnt
   40                     | case_list

   41 case_list: case_list case_statement
   42          | case_statement

   43 case_statement: CASE operation COLON stmt

   44 default_statemnt: DEFAULT COLON stmt

   45 assignment: id_array ASSIGN bool_conditions
   46           | bool_conditions

   47 bool_conditions: bool_conditions AND condition
   48                | bool_conditions OR condition
   49                | condition

   50 condition: comparison
   51          | operation

   52 comparison: operation GT operation
   53           | operation GTE operation
   54           | operation LT operation
   55           | operation LTE operation
   56           | operation EQ operation
   57           | operation NEQ operation

   58 operation: operation PLUS term
   59          | operation MINUS term
   60          | term

   61 term: term MULTIPLY factor
   62     | term DIVIDE factor
   63     | factor

   64 factor: unary_expression

   65 unary_expression: expression
   66                 | NOT unary_expression
   67                 | MINUS unary_expression
   68                 | DECREMENT unary_expression
   69                 | INCREMENT unary_expression

   70 expression: NUM_FLOAT
   71           | NUM_INT
   72           | id_array
   73           | LB bool_conditions RB

   74 id_array: ID
   75         | ID LSQ NUM_INT RSQ

   76 left_curly: LCURLY

   77 right_curly: RCURLY


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 27
FLOAT (259) 28
VOID (260) 29
IF (261) 32
ELSE (262) 30
FOR (263) 36
WHILE (264) 35
BREAK (265) 6
CONTINUE (266) 7
SWITCH (267) 38
CASE (268) 43
DEFAULT (269) 44
RETURN (270) 4 5
PRINT (271)
PLUS (272) 58
MINUS (273) 59 67
MULTIPLY (274) 61
DIVIDE (275) 62
MOD (276)
ASSIGN (277) 45
OR (278) 48
AND (279) 47
NOT (280) 66
SEMI (281) 4 5 6 7 8 14 15 36
COMMA (282) 17 23
COLON (283) 43 44
LT (284) 54
GT (285) 52
LTE (286) 55
GTE (287) 53
EQ (288) 56
NEQ (289) 57
LB (290) 20 32 35 36 38 73
RB (291) 20 32 35 36 38 73
LSQ (292) 26 75
RSQ (293) 26 75
LCURLY (294) 76
RCURLY (295) 77
INCREMENT (296) 69
DECREMENT (297) 68
ID (298) 20 25 26 74 75
NUM_INT (299) 71 75
NUM_FLOAT (300) 70


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
prog (47)
    on left: 1, on right: 0
stmt_list (48)
    on left: 2 3, on right: 1 2 19 37
stmt (49)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15, on right: 2 30 31 33 34
    43 44
var_dec (50)
    on left: 16, on right: 8
var_list (51)
    on left: 17 18, on right: 16 17
func_dec (52)
    on left: 19, on right: 9
func_header (53)
    on left: 20, on right: 19
func_params (54)
    on left: 21 22, on right: 20
param_decl (55)
    on left: 23 24, on right: 21 23
decl (56)
    on left: 25 26, on right: 23 24
type (57)
    on left: 27 28 29, on right: 16 20 25 26
if_block (58)
    on left: 30 31, on right: 10
if_condition (59)
    on left: 32, on right: 30 31
loop_block (60)
    on left: 33 34, on right: 11
while_condition (61)
    on left: 35, on right: 33
for_condition (62)
    on left: 36, on right: 34
stmt_block (63)
    on left: 37, on right: 12
switch_case_statement (64)
    on left: 38, on right: 13
case_statement_block (65)
    on left: 39 40, on right: 38
case_list (66)
    on left: 41 42, on right: 39 40 41
case_statement (67)
    on left: 43, on right: 41 42
default_statemnt (68)
    on left: 44, on right: 39
assignment (69)
    on left: 45 46, on right: 14 32 35 36
bool_conditions (70)
    on left: 47 48 49, on right: 5 45 46 47 48 73
condition (71)
    on left: 50 51, on right: 47 48 49
comparison (72)
    on left: 52 53 54 55 56 57, on right: 50
operation (73)
    on left: 58 59 60, on right: 38 43 51 52 53 54 55 56 57 58 59
term (74)
    on left: 61 62 63, on right: 58 59 60 61 62
factor (75)
    on left: 64, on right: 61 62 63
unary_expression (76)
    on left: 65 66 67 68 69, on right: 64 66 67 68 69
expression (77)
    on left: 70 71 72 73, on right: 65
id_array (78)
    on left: 74 75, on right: 17 18 45 72
left_curly (79)
    on left: 76, on right: 19 37 38
right_curly (80)
    on left: 77, on right: 19 37 38


State 0

    0 $accept: . prog $end

    $default  reduce using rule 3 (stmt_list)

    prog       go to state 1
    stmt_list  go to state 2


State 1

    0 $accept: prog . $end

    $end  shift, and go to state 3


State 2

    1 prog: stmt_list .
    2 stmt_list: stmt_list . stmt

    INT        shift, and go to state 4
    FLOAT      shift, and go to state 5
    VOID       shift, and go to state 6
    IF         shift, and go to state 7
    FOR        shift, and go to state 8
    WHILE      shift, and go to state 9
    BREAK      shift, and go to state 10
    CONTINUE   shift, and go to state 11
    SWITCH     shift, and go to state 12
    RETURN     shift, and go to state 13
    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    SEMI       shift, and go to state 16
    LB         shift, and go to state 17
    LCURLY     shift, and go to state 18
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    $default  reduce using rule 1 (prog)

    stmt                   go to state 24
    var_dec                go to state 25
    func_dec               go to state 26
    func_header            go to state 27
    type                   go to state 28
    if_block               go to state 29
    if_condition           go to state 30
    loop_block             go to state 31
    while_condition        go to state 32
    for_condition          go to state 33
    stmt_block             go to state 34
    switch_case_statement  go to state 35
    assignment             go to state 36
    bool_conditions        go to state 37
    condition              go to state 38
    comparison             go to state 39
    operation              go to state 40
    term                   go to state 41
    factor                 go to state 42
    unary_expression       go to state 43
    expression             go to state 44
    id_array               go to state 45
    left_curly             go to state 46


State 3

    0 $accept: prog $end .

    $default  accept


State 4

   27 type: INT .

    $default  reduce using rule 27 (type)


State 5

   28 type: FLOAT .

    $default  reduce using rule 28 (type)


State 6

   29 type: VOID .

    $default  reduce using rule 29 (type)


State 7

   32 if_condition: IF . LB assignment RB

    LB  shift, and go to state 47


State 8

   36 for_condition: FOR . LB assignment SEMI assignment SEMI assignment RB

    LB  shift, and go to state 48


State 9

   35 while_condition: WHILE . LB assignment RB

    LB  shift, and go to state 49


State 10

    6 stmt: BREAK . SEMI

    SEMI  shift, and go to state 50


State 11

    7 stmt: CONTINUE . SEMI

    SEMI  shift, and go to state 51


State 12

   38 switch_case_statement: SWITCH . LB operation RB left_curly case_statement_block right_curly

    LB  shift, and go to state 52


State 13

    4 stmt: RETURN . SEMI
    5     | RETURN . bool_conditions SEMI

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    SEMI       shift, and go to state 53
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    bool_conditions   go to state 54
    condition         go to state 38
    comparison        go to state 39
    operation         go to state 40
    term              go to state 41
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 55


State 14

   67 unary_expression: MINUS . unary_expression

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    unary_expression  go to state 56
    expression        go to state 44
    id_array          go to state 55


State 15

   66 unary_expression: NOT . unary_expression

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    unary_expression  go to state 57
    expression        go to state 44
    id_array          go to state 55


State 16

   15 stmt: SEMI .

    $default  reduce using rule 15 (stmt)


State 17

   73 expression: LB . bool_conditions RB

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    bool_conditions   go to state 58
    condition         go to state 38
    comparison        go to state 39
    operation         go to state 40
    term              go to state 41
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 55


State 18

   76 left_curly: LCURLY .

    $default  reduce using rule 76 (left_curly)


State 19

   69 unary_expression: INCREMENT . unary_expression

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    unary_expression  go to state 59
    expression        go to state 44
    id_array          go to state 55


State 20

   68 unary_expression: DECREMENT . unary_expression

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    unary_expression  go to state 60
    expression        go to state 44
    id_array          go to state 55


State 21

   74 id_array: ID .
   75         | ID . LSQ NUM_INT RSQ

    LSQ  shift, and go to state 61

    $default  reduce using rule 74 (id_array)


State 22

   71 expression: NUM_INT .

    $default  reduce using rule 71 (expression)


State 23

   70 expression: NUM_FLOAT .

    $default  reduce using rule 70 (expression)


State 24

    2 stmt_list: stmt_list stmt .

    $default  reduce using rule 2 (stmt_list)


State 25

    8 stmt: var_dec . SEMI

    SEMI  shift, and go to state 62


State 26

    9 stmt: func_dec .

    $default  reduce using rule 9 (stmt)


State 27

   19 func_dec: func_header . left_curly stmt_list right_curly

    LCURLY  shift, and go to state 18

    left_curly  go to state 63


State 28

   16 var_dec: type . var_list
   20 func_header: type . ID LB func_params RB

    ID  shift, and go to state 64

    var_list  go to state 65
    id_array  go to state 66


State 29

   10 stmt: if_block .

    $default  reduce using rule 10 (stmt)


State 30

   30 if_block: if_condition . stmt ELSE stmt
   31         | if_condition . stmt

    INT        shift, and go to state 4
    FLOAT      shift, and go to state 5
    VOID       shift, and go to state 6
    IF         shift, and go to state 7
    FOR        shift, and go to state 8
    WHILE      shift, and go to state 9
    BREAK      shift, and go to state 10
    CONTINUE   shift, and go to state 11
    SWITCH     shift, and go to state 12
    RETURN     shift, and go to state 13
    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    SEMI       shift, and go to state 16
    LB         shift, and go to state 17
    LCURLY     shift, and go to state 18
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    stmt                   go to state 67
    var_dec                go to state 25
    func_dec               go to state 26
    func_header            go to state 27
    type                   go to state 28
    if_block               go to state 29
    if_condition           go to state 30
    loop_block             go to state 31
    while_condition        go to state 32
    for_condition          go to state 33
    stmt_block             go to state 34
    switch_case_statement  go to state 35
    assignment             go to state 36
    bool_conditions        go to state 37
    condition              go to state 38
    comparison             go to state 39
    operation              go to state 40
    term                   go to state 41
    factor                 go to state 42
    unary_expression       go to state 43
    expression             go to state 44
    id_array               go to state 45
    left_curly             go to state 46


State 31

   11 stmt: loop_block .

    $default  reduce using rule 11 (stmt)


State 32

   33 loop_block: while_condition . stmt

    INT        shift, and go to state 4
    FLOAT      shift, and go to state 5
    VOID       shift, and go to state 6
    IF         shift, and go to state 7
    FOR        shift, and go to state 8
    WHILE      shift, and go to state 9
    BREAK      shift, and go to state 10
    CONTINUE   shift, and go to state 11
    SWITCH     shift, and go to state 12
    RETURN     shift, and go to state 13
    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    SEMI       shift, and go to state 16
    LB         shift, and go to state 17
    LCURLY     shift, and go to state 18
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    stmt                   go to state 68
    var_dec                go to state 25
    func_dec               go to state 26
    func_header            go to state 27
    type                   go to state 28
    if_block               go to state 29
    if_condition           go to state 30
    loop_block             go to state 31
    while_condition        go to state 32
    for_condition          go to state 33
    stmt_block             go to state 34
    switch_case_statement  go to state 35
    assignment             go to state 36
    bool_conditions        go to state 37
    condition              go to state 38
    comparison             go to state 39
    operation              go to state 40
    term                   go to state 41
    factor                 go to state 42
    unary_expression       go to state 43
    expression             go to state 44
    id_array               go to state 45
    left_curly             go to state 46


State 33

   34 loop_block: for_condition . stmt

    INT        shift, and go to state 4
    FLOAT      shift, and go to state 5
    VOID       shift, and go to state 6
    IF         shift, and go to state 7
    FOR        shift, and go to state 8
    WHILE      shift, and go to state 9
    BREAK      shift, and go to state 10
    CONTINUE   shift, and go to state 11
    SWITCH     shift, and go to state 12
    RETURN     shift, and go to state 13
    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    SEMI       shift, and go to state 16
    LB         shift, and go to state 17
    LCURLY     shift, and go to state 18
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    stmt                   go to state 69
    var_dec                go to state 25
    func_dec               go to state 26
    func_header            go to state 27
    type                   go to state 28
    if_block               go to state 29
    if_condition           go to state 30
    loop_block             go to state 31
    while_condition        go to state 32
    for_condition          go to state 33
    stmt_block             go to state 34
    switch_case_statement  go to state 35
    assignment             go to state 36
    bool_conditions        go to state 37
    condition              go to state 38
    comparison             go to state 39
    operation              go to state 40
    term                   go to state 41
    factor                 go to state 42
    unary_expression       go to state 43
    expression             go to state 44
    id_array               go to state 45
    left_curly             go to state 46


State 34

   12 stmt: stmt_block .

    $default  reduce using rule 12 (stmt)


State 35

   13 stmt: switch_case_statement .

    $default  reduce using rule 13 (stmt)


State 36

   14 stmt: assignment . SEMI

    SEMI  shift, and go to state 70


State 37

   46 assignment: bool_conditions .
   47 bool_conditions: bool_conditions . AND condition
   48                | bool_conditions . OR condition

    OR   shift, and go to state 71
    AND  shift, and go to state 72

    $default  reduce using rule 46 (assignment)


State 38

   49 bool_conditions: condition .

    $default  reduce using rule 49 (bool_conditions)


State 39

   50 condition: comparison .

    $default  reduce using rule 50 (condition)


State 40

   51 condition: operation .
   52 comparison: operation . GT operation
   53           | operation . GTE operation
   54           | operation . LT operation
   55           | operation . LTE operation
   56           | operation . EQ operation
   57           | operation . NEQ operation
   58 operation: operation . PLUS term
   59          | operation . MINUS term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74
    LT     shift, and go to state 75
    GT     shift, and go to state 76
    LTE    shift, and go to state 77
    GTE    shift, and go to state 78
    EQ     shift, and go to state 79
    NEQ    shift, and go to state 80

    $default  reduce using rule 51 (condition)


State 41

   60 operation: term .
   61 term: term . MULTIPLY factor
   62     | term . DIVIDE factor

    MULTIPLY  shift, and go to state 81
    DIVIDE    shift, and go to state 82

    $default  reduce using rule 60 (operation)


State 42

   63 term: factor .

    $default  reduce using rule 63 (term)


State 43

   64 factor: unary_expression .

    $default  reduce using rule 64 (factor)


State 44

   65 unary_expression: expression .

    $default  reduce using rule 65 (unary_expression)


State 45

   45 assignment: id_array . ASSIGN bool_conditions
   72 expression: id_array .

    ASSIGN  shift, and go to state 83

    $default  reduce using rule 72 (expression)


State 46

   37 stmt_block: left_curly . stmt_list right_curly

    $default  reduce using rule 3 (stmt_list)

    stmt_list  go to state 84


State 47

   32 if_condition: IF LB . assignment RB

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    assignment        go to state 85
    bool_conditions   go to state 37
    condition         go to state 38
    comparison        go to state 39
    operation         go to state 40
    term              go to state 41
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 45


State 48

   36 for_condition: FOR LB . assignment SEMI assignment SEMI assignment RB

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    assignment        go to state 86
    bool_conditions   go to state 37
    condition         go to state 38
    comparison        go to state 39
    operation         go to state 40
    term              go to state 41
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 45


State 49

   35 while_condition: WHILE LB . assignment RB

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    assignment        go to state 87
    bool_conditions   go to state 37
    condition         go to state 38
    comparison        go to state 39
    operation         go to state 40
    term              go to state 41
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 45


State 50

    6 stmt: BREAK SEMI .

    $default  reduce using rule 6 (stmt)


State 51

    7 stmt: CONTINUE SEMI .

    $default  reduce using rule 7 (stmt)


State 52

   38 switch_case_statement: SWITCH LB . operation RB left_curly case_statement_block right_curly

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    operation         go to state 88
    term              go to state 41
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 55


State 53

    4 stmt: RETURN SEMI .

    $default  reduce using rule 4 (stmt)


State 54

    5 stmt: RETURN bool_conditions . SEMI
   47 bool_conditions: bool_conditions . AND condition
   48                | bool_conditions . OR condition

    OR    shift, and go to state 71
    AND   shift, and go to state 72
    SEMI  shift, and go to state 89


State 55

   72 expression: id_array .

    $default  reduce using rule 72 (expression)


State 56

   67 unary_expression: MINUS unary_expression .

    $default  reduce using rule 67 (unary_expression)


State 57

   66 unary_expression: NOT unary_expression .

    $default  reduce using rule 66 (unary_expression)


State 58

   47 bool_conditions: bool_conditions . AND condition
   48                | bool_conditions . OR condition
   73 expression: LB bool_conditions . RB

    OR   shift, and go to state 71
    AND  shift, and go to state 72
    RB   shift, and go to state 90


State 59

   69 unary_expression: INCREMENT unary_expression .

    $default  reduce using rule 69 (unary_expression)


State 60

   68 unary_expression: DECREMENT unary_expression .

    $default  reduce using rule 68 (unary_expression)


State 61

   75 id_array: ID LSQ . NUM_INT RSQ

    NUM_INT  shift, and go to state 91


State 62

    8 stmt: var_dec SEMI .

    $default  reduce using rule 8 (stmt)


State 63

   19 func_dec: func_header left_curly . stmt_list right_curly

    $default  reduce using rule 3 (stmt_list)

    stmt_list  go to state 92


State 64

   20 func_header: type ID . LB func_params RB
   74 id_array: ID .
   75         | ID . LSQ NUM_INT RSQ

    LB   shift, and go to state 93
    LSQ  shift, and go to state 61

    $default  reduce using rule 74 (id_array)


State 65

   16 var_dec: type var_list .
   17 var_list: var_list . COMMA id_array

    COMMA  shift, and go to state 94

    $default  reduce using rule 16 (var_dec)


State 66

   18 var_list: id_array .

    $default  reduce using rule 18 (var_list)


State 67

   30 if_block: if_condition stmt . ELSE stmt
   31         | if_condition stmt .

    ELSE  shift, and go to state 95

    ELSE      [reduce using rule 31 (if_block)]
    $default  reduce using rule 31 (if_block)


State 68

   33 loop_block: while_condition stmt .

    $default  reduce using rule 33 (loop_block)


State 69

   34 loop_block: for_condition stmt .

    $default  reduce using rule 34 (loop_block)


State 70

   14 stmt: assignment SEMI .

    $default  reduce using rule 14 (stmt)


State 71

   48 bool_conditions: bool_conditions OR . condition

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    condition         go to state 96
    comparison        go to state 39
    operation         go to state 40
    term              go to state 41
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 55


State 72

   47 bool_conditions: bool_conditions AND . condition

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    condition         go to state 97
    comparison        go to state 39
    operation         go to state 40
    term              go to state 41
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 55


State 73

   58 operation: operation PLUS . term

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    term              go to state 98
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 55


State 74

   59 operation: operation MINUS . term

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    term              go to state 99
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 55


State 75

   54 comparison: operation LT . operation

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    operation         go to state 100
    term              go to state 41
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 55


State 76

   52 comparison: operation GT . operation

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    operation         go to state 101
    term              go to state 41
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 55


State 77

   55 comparison: operation LTE . operation

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    operation         go to state 102
    term              go to state 41
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 55


State 78

   53 comparison: operation GTE . operation

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    operation         go to state 103
    term              go to state 41
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 55


State 79

   56 comparison: operation EQ . operation

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    operation         go to state 104
    term              go to state 41
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 55


State 80

   57 comparison: operation NEQ . operation

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    operation         go to state 105
    term              go to state 41
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 55


State 81

   61 term: term MULTIPLY . factor

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    factor            go to state 106
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 55


State 82

   62 term: term DIVIDE . factor

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    factor            go to state 107
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 55


State 83

   45 assignment: id_array ASSIGN . bool_conditions

    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    LB         shift, and go to state 17
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    bool_conditions   go to state 108
    condition         go to state 38
    comparison        go to state 39
    operation         go to state 40
    term              go to state 41
    factor            go to state 42
    unary_expression  go to state 43
    expression        go to state 44
    id_array          go to state 55


State 84

    2 stmt_list: stmt_list . stmt
   37 stmt_block: left_curly stmt_list . right_curly

    INT        shift, and go to state 4
    FLOAT      shift, and go to state 5
    VOID       shift, and go to state 6
    IF         shift, and go to state 7
    FOR        shift, and go to state 8
    WHILE      shift, and go to state 9
    BREAK      shift, and go to state 10
    CONTINUE   shift, and go to state 11
    SWITCH     shift, and go to state 12
    RETURN     shift, and go to state 13
    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    SEMI       shift, and go to state 16
    LB         shift, and go to state 17
    LCURLY     shift, and go to state 18
    RCURLY     shift, and go to state 109
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23

    stmt                   go to state 24
    var_dec                go to state 25
    func_dec               go to state 26
    func_header            go to state 27
    type                   go to state 28
    if_block               go to state 29
    if_condition           go to state 30
    loop_block             go to state 31
    while_condition        go to state 32
    for_condition          go to state 33
    stmt_block             go to state 34
    switch_case_statement  go to state 35
    assignment             go to state 36
    bool_conditions        go to state 37
    condition              go to state 38
    comparison             go to state 39
    operation              go to state 40
    term                   go to state 41
    factor                 go to state 42
    unary_expression       go to state 43
    expression             go to state 44
    id_array               go to state 45
    left_curly             go to state 46
    right_curly            go to state 110


State 85

   32 if_condition: IF LB assignment . RB

    RB  shift, and go to state 111


State 86

   36 for_condition: FOR LB assignment . SEMI assignment SEMI assignment RB

    SEMI  shift, and go to state 112


State 87

   35 while_condition: WHILE LB assignment . RB

    RB  shift, and go to state 113


State 88

   38 switch_case_statement: SWITCH LB operation . RB left_curly case_statement_block right_curly
   58 operation: operation . PLUS term
   59          | operation . MINUS term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74
    RB     shift, and go to state 114


State 89

    5 stmt: RETURN bool_conditions SEMI .

    $default  reduce using rule 5 (stmt)


State 90

   73 expression: LB bool_conditions RB .

    $default  reduce using rule 73 (expression)


State 91

   75 id_array: ID LSQ NUM_INT . RSQ

    RSQ  shift, and go to state 115


State 92

    2 stmt_list: stmt_list . stmt
   19 func_dec: func_header left_curly stmt_list . right_curly

    INT        shift, and go to state 4
    FLOAT      shift, and go to state 5
    VOID       shift, and go to state 6
    IF         shift, and go to state 7
    FOR        shift, and go to state 8
    WHILE      shift, and go to state 9
    BREAK      shift, and go to state 10
    CONTINUE   shift, and go to state 11
    SWITCH     shift, and go to state 12
    RETURN     shift, and go to state 13
    MINUS      shift, and go to state 14
    NOT        shift, and go to state 15
    SEMI       shift, and go to state 16
    LB         shift, and go to state 17
    LCURLY     shift, and go to state 18
    RCURLY     shift, and go to state 109
    INCREMENT  shift, and go to state 19
    DECREMENT  shift, and go to state 20
    ID         shift, and go to state 21
    NUM_INT    shift, and go to state 22
    NUM_FLOAT  shift, and go to state 23
